# pvd_custom

./: .gitignore  CMakeLists.txt  README.md  pvd_custom.pri  pvd_custom.pro  pvd_custom.sln  pvd_custom.vcxproj  pvd_custom.vcxproj.filters
3rd/PhysX/PhysX_3.4/Lib/vc15win64/: LowLevel.lib  LowLevelAABB.lib  LowLevelAABBCHECKED.lib  LowLevelAABBDEBUG.lib  LowLevelAABBPROFILE.lib  LowLevelCHECKED.lib  LowLevelCloth.lib  LowLevelClothCHECKED.lib  LowLevelClothDEBUG.lib  LowLevelClothPROFILE.lib  LowLevelDEBUG.lib  LowLevelDynamics.lib  LowLevelDynamicsCHECKED.lib  LowLevelDynamicsPROFILE.lib  LowLevelPROFILE.lib  LowLevelParticles.lib  LowLevelParticlesCHECKED.lib  LowLevelParticlesDEBUG.lib  LowLevelParticlesPROFILE.lib  PhysX3CHECKED_x64.exp  PhysX3CHECKED_x64.lib  PhysX3CharacterKinematicCHECKED_x64.exp  PhysX3CharacterKinematicCHECKED_x64.lib  PhysX3CharacterKinematicDEBUG_x64.exp  PhysX3CharacterKinematicDEBUG_x64.lib  PhysX3CharacterKinematicPROFILE_x64.exp  PhysX3CharacterKinematicPROFILE_x64.lib  PhysX3CharacterKinematic_x64.exp  PhysX3CharacterKinematic_x64.lib  PhysX3CommonCHECKED_x64.exp  PhysX3CommonCHECKED_x64.lib  PhysX3CommonDEBUG_x64.exp  PhysX3CommonDEBUG_x64.lib  PhysX3CommonPROFILE_x64.exp  PhysX3CommonPROFILE_x64.lib  PhysX3Common_x64.exp  PhysX3Common_x64.lib  PhysX3CookingCHECKED_x64.exp  PhysX3CookingCHECKED_x64.lib  PhysX3CookingDEBUG_x64.exp  (+15 more)
3rd/PhysX/PxShared/lib/vc15win64/: PsFastXmlCHECKED_x64.lib  PsFastXmlDEBUG_x64.lib  PsFastXmlPROFILE_x64.lib  PsFastXml_x64.lib  PxFoundationCHECKED_x64.exp  PxFoundationCHECKED_x64.lib  PxFoundationDEBUG_x64.exp  PxFoundationDEBUG_x64.lib  PxFoundationPROFILE_x64.exp  PxFoundationPROFILE_x64.lib  PxFoundation_x64.exp  PxFoundation_x64.lib  PxPvdSDKCHECKED_x64.exp  PxPvdSDKCHECKED_x64.lib  PxPvdSDKDEBUG_x64.exp  PxPvdSDKDEBUG_x64.lib  PxPvdSDKPROFILE_x64.exp  PxPvdSDKPROFILE_x64.lib  PxPvdSDK_x64.exp  PxPvdSDK_x64.lib  PxTaskCHECKED_x64.lib  PxTaskDEBUG_x64.lib  PxTaskPROFILE_x64.lib  PxTask_x64.lib
3rd/PhysX/PxShared/src/compiler/vc15win64/: PsFastXml.vcxproj  PxFoundation.vcxproj  PxPvdSDK.vcxproj  PxTask.vcxproj
3rd/PhysX/PxShared/src/compiler/vc15win64/x64/PsFastXml/checked/PsFastXml.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  PsFastXml.lastbuildstate
3rd/PhysX/PxShared/src/compiler/vc15win64/x64/PsFastXml/debug/PsFastXml.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
3rd/PhysX/PxShared/src/compiler/vc15win64/x64/PsFastXml/profile/PsFastXml.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
3rd/PhysX/PxShared/src/compiler/vc15win64/x64/PsFastXml/release/PsFastXml.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
3rd/PhysX/PxShared/src/compiler/vc15win64/x64/PxFoundation/checked/PxFoundation.tlog/: CL.19488.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  PxFoundation.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
3rd/PhysX/PxShared/src/compiler/vc15win64/x64/PxFoundation/debug/PxFoundation.tlog/: CL.15200.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  PxFoundation.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
3rd/PhysX/PxShared/src/compiler/vc15win64/x64/PxFoundation/profile/PxFoundation.tlog/: CL.15220.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  PxFoundation.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
3rd/PhysX/PxShared/src/compiler/vc15win64/x64/PxFoundation/release/PxFoundation.tlog/: CL.1632.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  PxFoundation.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  (+2 more)
doc/: doc.docx
res/: test1.col_xml  test2.col_xml
src/: App.cpp  App.h  Camera.cpp  Camera.h  CameraBase.cpp  CameraBase.h  CameraControl.cpp  CameraControl.h  CameraFTPS.cpp  CameraFTPS.h  FileHelper.cpp  FileHelper.h  GlWidget.cpp  GlWidget.h  ICamera.cpp  ICamera.h  IPhysics.cpp  IPhysics.h  IRenderer.cpp  IRenderer.h  IScene.cpp  IScene.h  Main.cpp  MainWindow.cpp  MainWindow.h  MathHelper.cpp  MathHelper.h  MeshCounter.cpp  MeshCounter.h  Physics.cpp  Physics.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsObject.h  PhysicsScene.cpp  PhysicsScene.h  PhysicsWorld.cpp  PhysicsWorld.h  PhysxHelper.cpp  PhysxHelper.h  (+35 more)
src/core/camera/: CameraBase.cpp  CameraFTPS.cpp  CameraFTPS.hpp
src/core/physics/: PhysicsEngine.cpp  PhysicsObject.cpp  PhysicsObject.hpp
src/core/render/: RenderBuffer.cpp  RenderBuffer.hpp  RenderEngine.cpp  RenderObject.cpp  RenderObject.hpp  RenderProgramBase.cpp  RenderProgramBase.hpp  RenderProgramPhong.cpp  RenderProgramPhong.hpp
src/core/scene/: SceneObject.cpp  SceneObject.hpp
src/interface/: ICamera.cpp  ICamera.hpp  IPhysics.cpp  IPhysics.hpp  IRenderer.cpp  IRenderer.hpp  IScene.cpp  IScene.hpp
src/logic/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  Physics.cpp  Physics.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp
src/logic/ui/: GlWidget.cpp  GlWidget.hpp  MainWindow.cpp  MainWindow.hpp  TreeView.cpp  TreeViewAttr.cpp  TreeViewAttr.hpp  TreeViewScene.cpp  TreeViewScene.hpp
src/logic/ui_qt/: MainWindow.ui
src/ui/: MainWindow.ui
src/utility/: FileHelper.cpp  FileHelper.hpp  MathHelper.cpp  MathHelper.hpp  RenderHelper.cpp  RenderHelper.hpp
(+61 files in other folders)
